css/main.css
/***** BASE STYLES ******/
html {
  height: auto;
}

body {
  font-family: "Rhodium Libre", serif;
  font-size: 16px;
  height: 100%;
}

main {
  width: 100%;
}

img {
  width: 100%;
  height: auto;
}

html {
  scroll-behavior: smooth;
}

/*****GRID*****/

#work {
  width: 96%;
  margin: 0 auto;
}

#about {
  height: auto;
  width: 100%;
}

#contact {
  height: 33em;
  width: 100%;
}

.full-width {
  margin: 0 auto;
  width: 100%;
}

/*****HEADER*****/

#top-div {
  background: url(../img/laptop-hero-image.jpg) center no-repeat;
  background-size: cover;
  color: #006666;
  height: 49em;
}

header h1,
h2 {
  font-family: "Rationale", sans-serif;
  margin: 0px auto;
  text-align: center;
}

header h1 {
  color: #006666;
  font-size: 3.12em;
  line-height: 45px;
  padding: 3%;
}

header h2 {
  font-size: 1.4em;
  padding: 0;
  width: 88%;
}

nav {
  display: none;
}

.topnav {
  background-color: #333;
  overflow: hidden;
}

.topnav a {
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 1em;
}

.topnav a:hover {
  background-color: #ddd;
  color: black;
}

.active {
  background-color: #009999;
  color: white;
}

.topnav .icon {
  display: none;
}

.topnav a:not(:first-child) {
  display: none;
}
.topnav a.icon {
  float: right;
  display: block;
}

.topnav.responsive {
  position: relative;
}
.topnav.responsive a.icon {
  position: absolute;
  right: 0;
  top: 0;
}

.topnav.responsive a {
  float: none;
  display: block;
  text-align: left;
}

nav {
  transition: background 0.8s;
}

nav.scrolled {
  background: #0a0a0a;
  background: #009999;
  position: fixed;
  top: 0;
  height: 48px;
  width: 100%;
}

nav.scrolled a {
  color: #fff;
}

nav.scrolled a:before {
  background-color: #fff;
}

/*****WORK*****/

#work {
  color: #006666;
}

#work h2 {
  font-family: "Rationale", sans-serif;
  font-size: 3.12em;
  font-weight: bold;
  margin-top: 75px;
}

#work h3 {
  font-family: "Orbitron", sans-serif;
  font-weight: bold;
  text-align: center;
  text-transform: uppercase;
}

#work h3:hover {
  text-decoration: underline;
}

#work h4 {
  padding: 5%;
  text-align: center;
}

#work p {
  margin: 0 auto;
  padding: 5%;
  text-align: center;
}

.work-img {
  width: 60%;
  margin: auto;
  margin-top: 135px;
}

#work img {
  border-radius: 7px;
  border: 1px solid #b7b7b7;
  box-shadow: 6px 8px 25px #888888;
  transition: all 0.4s ease-in-out;
}

#work .work-img img {
  border-radius: 7px;
  border: 1px solid #b7b7b7;
  box-shadow: 6px 8px 25px #888888;
}

@media only screen and (min-width: 768px) {
  #work .work-img img:hover {
    width: 110%;
  }
}

#remove-decor {
  color: #006666;
  text-decoration: none;
}

#remove-decor:hover {
  text-decoration: underline;
}

#holstee-img {
  width: 35%;
}

#more-link {
  padding: 40px;
  text-align: center;
  clear: both;
}

#more-link a {
  text-decoration: none;
  color: #006666;
  font-size: 1.2em;
  transition: 0.5s;
  border: 3px solid #006666;
  border-radius: 30px;
  padding: 15px;
}

#more-link a:hover {
  background-color: #006666;
  color: white;
}

#more-link a:after {
  content: ">";
  position: relative;
  color: #006666;
  font-size: 30px;
  transition: 0.5s;
  transform: translatey(-50%);
  right: -5px;
  top: 1px;
}

#more-link a:hover:after {
  color: #fff;
  transition: 0.5s;
  right: -12px;
}

#work h3#more-link:hover {
  text-decoration: none;
}

/*****ABOUT*****/

#about {
  background-color: #006666;
  padding-bottom: 60px;
}

#about h2,
#about h3,
#about p {
  color: white;
  text-align: center;
}

#about p {
  line-height: 32px;
  padding: 5%;
  margin: auto;
}

#about h2 {
  font-family: "Rationale", sans-serif;
  font-size: 2.5em;
  padding: 4%;
  text-align: center;
}

#about h3 {
  padding: 0 2% 5% 2%;
}

#portrait-img {
  padding-top: 28px;
  width: 95%;
  border-radius: 7px;
  margin: 0 auto;
}

#portrait-img img {
  border: 1px solid #fff;
  -moz-box-shadow: 2px 2px 6px #ccc;
  box-shadow: 2px 2px 6px #ccc;
  border-radius: 5px;
}

/*****CONTACT*****/

#contact {
  background-color: #009999;
  color: white;
  text-align: center;
  clear: both;
}

#contact h2 {
  font-family: "Rationale", sans-serif;
  font-size: 2.5em;
  padding: 4%;
}

#contact a {
  color: white;
  padding: 5%;
  text-decoration: none;
}

#contact a:hover {
  text-decoration: underline;
  color: #bdbf09;
}

#contact p {
  text-decoration: none;
  line-height: 5px;
}

#contact ul {
  list-style: none;
  padding-right: 26px;
}

#contact ul li {
  display: inline-block;
  padding-right: 15px;
}

#contact img:hover {
  filter: brightness(125%);
}

/*****COPYRIGHT*****/

#copyright {
  background: #009999;
  color: white;
  margin: -100px auto;
  text-align: center;
  clear: both;
}

/* ========== WORK PAGE ========== */

.main-header {
  width: 100%;
}

#header-title-work {
  font-size: 3.12em;
  font-weight: bold;
  line-height: 55px;
  margin-top: 75px;
  color: #006666;
}

.project-unplugged {
  width: 60%;
  margin: auto;
}

.project-lolcat {
  width: 60%;
  margin: auto;
}

.project-map {
  width: 60%;
  margin: auto;
}

#workpage {
  color: #006666;
  padding: 17%;
}

#workpage h4 {
  font-size: 1.2em;
  text-align: center;
}

.workpage-titles {
  font-family: "Rationale", sans-serif;
  font-size: 2.5em;
  font-weight: bold;
  margin: 80px 0 45px 0;
  padding: 5%;
  text-transform: uppercase;
}

#workpage p {
  font-size: 1.2em;
}

#workpage-copyright {
  background: #009999;
  color: white;
  text-align: center;
  clear: both;
}

#workpage-copyright p {
  padding-top: 15px;
}

@media only screen and (min-width: 768px) {
  /* Tablet styles here */

  .half-width {
    width: 48%;
    padding: 5% 1%;
    float: left;
  }

  .third-width {
    width: 33.33%;
    float: left;
  }

  #work .half-width {
    margin-bottom: 50px;
  }

  #about .half-width {
    margin: 0 auto;
  }

  #header-wrapper {
    background: url(../img/laptop-hero-image.jpg) center no-repeat;
    background-size: cover;
    color: #006666;
    height: 55em;
  }

  .topnav {
    display: none;
  }

  nav {
    display: inline-block;
    font-size: 1em;
    font-weight: bold;
    text-align: right;
    width: 100%;
    background-color: #7576693d;
  }

  nav ul {
    list-style: none;
    margin: inherit;
    padding: 0;
    width: 90%;
  }

  nav ul li {
    border-bottom: 1px solid black;
    display: list-item;
    padding: 19px;
    text-transform: uppercase;
  }

  nav ul li a {
    color: #333;
    text-decoration: none;
  }

  nav ul li {
    border: none;
    display: inline-block;
    padding: 1%;
  }

  nav ul li a {
    color: #006666;
    position: relative;
  }

  nav ul li a:before {
    content: "";
    transition: width 400ms ease;
    position: absolute;
    display: block;
    background-color: #006666;
    width: 0;
    height: 5px;
    top: 100%;
    left: 50%;
    transform: translateX(-50%);
  }

  nav ul li a:hover:before {
    width: 100%;
  }

  /* nav ul li a:hover {
    color: #06a7a7;
    font-size: 110%;
  } */

  header h1 {
    padding-top: 1%;
  }

  #home h2 {
    font-size: 1.85em;
    padding: 0.5%;
  }

  #work h2 {
    padding: 6%;
    width: 80%;
  }

  #top-div {
    background: none;
  }

  .work-img {
    margin: 20px auto;
    width: 60%;
  }

  #work p {
    padding: 0 10% 20% 0;
    width: 80%;
  }

  #holstee-img {
    margin: 0 auto;
    padding-bottom: 0px;
  }

  #about {
    height: 62em;
  }

  #about p {
    width: 80%;
  }

  #contact p {
    line-height: normal;
  }

  /* ========== WORK PAGE ========== */

  #header-title-work {
    margin-top: 125px;
  }

  #header-title-work h2 {
    font-size: 1.3em;
    padding: 6%;
  }

  #lolcat-div,
  #chee-z-jokes-div,
  #decision-div,
  #lights-out-div {
    clear: both;
  }
}

@media only screen and (min-width: 940px) {
  /* Desktop styles here */

  #header-wrapper {
    background: url(../img/laptop-hero-image.jpg) center no-repeat;
    background-size: cover;
    height: webkit-fill-available;
  }

  header h1 {
    padding: 0;
  }

  #top-div {
    padding: 0 20%;
  }

  #work {
    height: auto;
    max-width: 1440px;
  }

  .work-img {
    padding-left: 10%;
    width: 60%;
  }

  #work p {
    padding-right: 10%;
    line-height: 2.2em;
  }

  #about {
    clear: both;
  }

  #portrait-img {
    width: 75%;
  }

  #about p {
    padding-right: 10%;
  }

  #holstee-img {
    width: 40%;
    margin: 20px auto;
    padding-bottom: 0px;
  }

  /* ========== WORK PAGE ========== */

  #unplugged-div figure {
    width: 40%;
  }

  #lolcat-div figure {
    width: 40%;
  }
  #work h4 {
    padding: 1% 0 10% 0;
  }

  #workpage {
    padding-top: 20px;
  }
}

